--- a/index.html
+++ b/index.html
@@ -1,82 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Dreamshare</title>
-</head>
-<body>
-    <header class="header">
-        <div class="header__container container">
-            <h1 class="header__logo title">
-                Dreamshare
-            </h1>
-            <div class="header__buttons">
-                <button class="header__btn btn log-in">
-                    Log in
-                </button>
-                <button class="header__btn btn sign-up">
-                    Sign up
-                </button>
-            </div>
-            <section class="header__section">
-                <div class="header__text">
-                    <h2 class="header__title title">
-                        Share Your Holiday Dreams
-                    </h2>
-                    <p class="header__descr">
-                        And find the perfect partner to fullfit it
-                    </p>
-                    <a href="" class="header__link link">Find your holiday partner</a>
-                </div>
-            </section>
-        </div>
-    </header>
-    <main class="main">
-        <section class="work">
-            <div class="work__container container">
-                <h2 class="work__title title">
-                    How Dreamshare works?
-                </h2>
-                <article class="work__article">
-                    <img src="img/work-img-1.jpg" alt="" class="work__img">
-                    <div class="work__gradient"></div>
-                    <a href="" class="work__link link">Step 1</a>
-                    <h3 class="work__subtitle subtitle">
-                        Sed leo enim, condimentum
-                    </h3>
-                    <p class="work__descr">
-                        Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.
-                    </p>
-                </article>
-                <article class="work__article">
-                    <img src="img/work-img-1.jpg" alt="" class="work__img">
-                    <div class="work__gradient"></div>
-                    <a href="" class="work__link link">Step 1</a>
-                    <h3 class="work__subtitle subtitle">
-                        Sed leo enim, condimentum
-                    </h3>
-                    <p class="work__descr">
-                        Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.
-                    </p>
-                </article>
-                <article class="work__article">
-                    <img src="img/work-img-1.jpg" alt="" class="work__img">
-                    <div class="work__gradient"></div>
-                    <a href="" class="work__link link">Step 1</a>
-                    <h3 class="work__subtitle subtitle">
-                        Sed leo enim, condimentum
-                    </h3>
-                    <p class="work__descr">
-                        Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.
-                    </p>
-                </article>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
 
-    </footer>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="build/css/styles.css">
+  <title>Dreamshare</title>
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__container container">
+      <h1 class="header__logo">
+        <a href="" class="link">Dreamshare</a>
+      </h1>
+      <div class="header__buttons">
+        <button class="header__btn btn log-in">
+          Log in
+        </button>
+        <button class="header__btn btn sign-up">
+          Sign up
+        </button>
+      </div>
+      <section class="header__section">
+        <div class="header__text">
+          <h2 class="header__title title">
+            Share Your Holiday Dreams
+          </h2>
+          <p class="header__descr descr">
+            And find the perfect partner to fullfit it
+          </p>
+          <a href="" class="header__link link red-link">Find your holiday partner</a>
+        </div>
+      </section>
+    </div>
+  </header>
+  <main class="main">
+    <section class="work">
+      <div class="work__container container">
+        <h2 class="work__title title">
+          How Dreamshare works?
+        </h2>
+        <article class="work__article">
+          <img src="build/img/work-img-1.jpg" alt="Step 1" class="work__img">
+          <div class="work__text">
+            <a href="" class="work__link link red-link">Step 1</a>
+            <h3 class="work__subtitle subtitle">
+              Sed leo enim, condimentum
+            </h3>
+            <p class="work__descr descr">
+              Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.
+            </p>
+          </div>
+        </article>
+        <article class="work__article">
+          <img src="build/img/work-img-2.jpg" alt="Step 2" class="work__img">
+          <div class="work__text">
+            <a href="" class="work__link link red-link">Step 2</a>
+            <h3 class="work__subtitle subtitle">
+              Morbi velit risus
+            </h3>
+            <p class="work__descr descr">
+              Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.
+            </p>
+          </div>
+        </article>
+        <article class="work__article">
+          <img src="build/img/work-img-3.jpg" alt="Step 3" class="work__img">
+          <div class="work__text">
+            <a href="" class="work__link link red-link">Step 3</a>
+            <h3 class="work__subtitle subtitle">
+              Sed leo enim, condimentum
+            </h3>
+            <p class="work__descr descr">
+              Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
+    <section class="partners">
+      <div class="partners__container container">
+        <h2 class="partners__title title">
+          Meet a partner for your best holiday
+        </h2>
+        <article class="partners__article">
+          <div class="partners__img-container">
+            <img src="build/img/partners-img-1.jpg" alt="Bradley Hunter" class="partners__img">
+            <span class="partners__interest tv"></span>
+          </div>
+          <h3 class="partners__name">
+            Bradley Hunter
+          </h3>
+          <p class="partners__descr descr">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
+        </article>
+        <article class="partners__article">
+          <div class="partners__img-container">
+            <img src="build/img/partners-img-2.jpg" alt="Heather Walker" class="partners__img">
+            <span class="partners__interest cafe"></span>
+          </div>
+          <h3 class="partners__name">
+            Heather Walker
+          </h3>
+          <p class="partners__descr descr">
+            I'm a happy person that loves cats and climbing on mountains.
+          </p>
+        </article>
+        <article class="partners__article">
+          <div class="partners__img-container">
+            <img src="build/img/partners-img-3.jpg" alt="Lucas Marsha" class="partners__img">
+            <span class="partners__interest science"></span>
+          </div>
+          <h3 class="partners__name">
+            Lucas Marsha
+          </h3>
+          <p class="partners__descr descr">
+            I get my inspiration from nature and objects around me. I have a passion to colours, typography and
+            skateboards.
+          </p>
+        </article>
+        <article class="partners__article">
+          <div class="partners__img-container">
+            <img src="build/img/partners-img-4.jpg" alt="Bradley Hunter" class="partners__img">
+            <span class="partners__interest telegram"></span>
+          </div>
+          <h3 class="partners__name">
+            Bradley Hunter
+          </h3>
+          <p class="partners__descr descr">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
+        </article>
+        <a href="" class="partners__link link white-link">
+          See other partners
+        </a>
+      </div>
+    </section>
+    <section class="activity">
+      <div class="activity__container container">
+        <h2 class="activity__title title">
+          Discover holiday activity ideas
+        </h2>
+        <ul class="activity__list list">
+          <li class="activity__item sport">
+            <a href="" class="activity__link link">
+              Sport and Activity
+            </a>
+          </li>
+          <li class="activity__item health">
+            <a href="" class="activity__link link">
+              Wellnes and Health
+            </a>
+          </li>
+          <li class="activity__item extreme">
+            <a href="" class="activity__link link">
+              Extreme Sports and&nbsp;Expeditions
+            </a>
+          </li>
+          <li class="activity__item games">
+            <a href="" class="activity__link link">
+              Games
+            </a>
+          </li>
+          <li class="activity__item culture">
+            <a href="" class="activity__link link">
+              Culture and Education
+            </a>
+          </li>
+          <li class="activity__item relax">
+            <a href="" class="activity__link link">
+              Relaxation
+            </a>
+          </li>
+          <li class="activity__item travel">
+            <a href="" class="activity__link link">
+              Travelling
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="search">
+      <div class="search__container container">
+        <h2 class="search__title title">
+          Discover holiday activity ideas
+        </h2>
+        <p class="search__descr descr">
+          Hi! What are your holiday interests?
+        </p>
+        <form action="URL" class="search__form">
+          <input type="search" class="search__input" required>
+          <label class="search__label">
+            Enter your interests
+          </label>
+          <button type="submit" class="search__btn btn red-link">
+            Search&nbsp;partners
+          </button>
+        </form>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer__container container">
+      <h2 class="footer__logo">
+        <a href="" class="footer__link link">
+          Dreamshare
+        </a>
+      </h2>
+      <nav class="footer__nav">
+        <ul class="footer__list list">
+          <li class="footer__item">
+            <h2 class="footer__title title">
+              Company
+            </h2>
+          </li>
+          <li class="footer__item">
+            <a href="" class="footer__link link">
+              About
+            </a>
+          </li>
+          <li class="footer__item">
+            <a href="" class="footer__link link">
+              Contacts
+            </a>
+          </li>
+          <li class="footer__item">
+            <a href="" class="footer__link link">
+              Press
+            </a>
+          </li>
+          <li class="footer__item">
+            <a href="" class="footer__link link">
+              Blog
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__list list">
+        <li class="footer__item">
+          <h2 class="footer__title title">
+            Partners
+          </h2>
+        </li>
+      </ul>
+      <section class="footer__section">
+        <h2 class="footer__section-title">
+          Designed by
+        </h2>
+        <a href="" class="link">
+          <img src="build/img/areto-logo.png" alt="Areto" class="footer__img">
+        </a>
+      </section>
+    </div>
+  </footer>
 </body>
+
 </html>
