адаптив под мобильные устройства

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         <h2 class="work__title title">
           How Dreamshare works?
         </h2>
-        <article class="work__article">
-          <img src="build/img/work-img-1.jpg" alt="Step 1" class="work__img">
+        <article class="work__article step-1">
           <div class="work__text">
             <a href="" class="work__link link red-link">Step 1</a>
             <h3 class="work__subtitle subtitle">
@@ -53,8 +52,7 @@
             </p>
           </div>
         </article>
-        <article class="work__article">
-          <img src="build/img/work-img-2.jpg" alt="Step 2" class="work__img">
+        <article class="work__article step-2">
           <div class="work__text">
             <a href="" class="work__link link red-link">Step 2</a>
             <h3 class="work__subtitle subtitle">
@@ -65,8 +63,7 @@
             </p>
           </div>
         </article>
-        <article class="work__article">
-          <img src="build/img/work-img-3.jpg" alt="Step 3" class="work__img">
+        <article class="work__article step-3">
           <div class="work__text">
             <a href="" class="work__link link red-link">Step 3</a>
             <h3 class="work__subtitle subtitle">
@@ -143,39 +140,39 @@
         <h2 class="activity__title title">
           Discover holiday activity ideas
         </h2>
-        <ul class="activity__list list">
-          <li class="activity__item sport">
-            <a href="" class="activity__link link">
+        <ul class="activity-list list">
+          <li class="activity-list__item sport">
+            <a href="" class="activity-list__link link">
               Sport and Activity
             </a>
           </li>
-          <li class="activity__item health">
-            <a href="" class="activity__link link">
+          <li class="activity-list__item health">
+            <a href="" class="activity-list__link link">
               Wellnes and Health
             </a>
           </li>
-          <li class="activity__item extreme">
-            <a href="" class="activity__link link">
+          <li class="activity-list__item extreme">
+            <a href="" class="activity-list__link link">
               Extreme Sports and&nbsp;Expeditions
             </a>
           </li>
-          <li class="activity__item games">
-            <a href="" class="activity__link link">
+          <li class="activity-list__item games">
+            <a href="" class="activity-list__link link">
               Games
             </a>
           </li>
-          <li class="activity__item culture">
-            <a href="" class="activity__link link">
+          <li class="activity-list__item culture">
+            <a href="" class="activity-list__link link">
               Culture and Education
             </a>
           </li>
-          <li class="activity__item relax">
-            <a href="" class="activity__link link">
+          <li class="activity-list__item relax">
+            <a href="" class="activity-list__link link">
               Relaxation
             </a>
           </li>
-          <li class="activity__item travel">
-            <a href="" class="activity__link link">
+          <li class="activity-list__item travel">
+            <a href="" class="activity-list__link link">
               Travelling
             </a>
           </li>
@@ -238,7 +235,7 @@
           </li>
         </ul>
       </nav>
-      <ul class="footer__list list">
+      <ul class="footer__list list partners-list">
         <li class="footer__item">
           <h2 class="footer__title title">
             Partners
@@ -255,6 +252,8 @@
       </section>
     </div>
   </footer>
+
+  <script src="build/js/main.js"></script>
 </body>
 
 </html>
